<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Transition
        app:constraintSetEnd="@+id/end"
        app:constraintSetStart="@+id/start"
        app:duration="3000">

        <!-- Define the click action on the button -->
        <OnClick
            app:clickAction="toggle"
            app:targetId="@id/custom_button" />

        <!-- Keyframes for animating the button width, text, and rotation -->
        <KeyFrameSet>

            <!-- KeyPosition: Animation for changing button width -->
            <KeyPosition
                android:valueFrom="0dp"
                android:valueTo="100%"
                android:valueType="floatType"
                app:framePosition="50"
                app:keyPositionType="parentRelative"
                app:percentY="0.5"
                app:targetId="@id/custom_button" />

            <!-- KeyAttributeSet: Animation for changing button properties at the start -->
            <KeyAttributeSet
                android:alpha="1"
                app:backgroundColor="#0000FF"
                app:customAttribute_rotation="0"
                app:customAttribute_text="@string/download"
                app:framePosition="0"
                app:targetId="@id/custom_button" />

            <!-- KeyAttributeSet: Animation for changing button properties at the middle -->
            <KeyAttributeSet
                android:alpha="0"
                app:backgroundColor="#00FF00"
                app:customAttribute_rotation="180"
                app:customAttribute_text="@string/loading_text"
                app:framePosition="50"
                app:targetId="@id/custom_button" />

            <!-- KeyAttributeSet: Animation for changing button properties at the end -->
            <KeyAttributeSet
                android:alpha="1"
                app:backgroundColor="#FF0000"
                app:customAttribute_rotation="360"
                app:customAttribute_text="@string/completed"
                app:framePosition="100"
                app:targetId="@id/custom_button" />
        </KeyFrameSet>
    </Transition>

    <!-- ConstraintSet at the start and end of the animation -->
    <ConstraintSet android:id="@+id/start">
        <Constraint
            android:id="@id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadOptions" />
    </ConstraintSet>
    <ConstraintSet android:id="@+id/end">
        <Constraint
            android:id="@id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/downloadOptions" />
    </ConstraintSet>
</MotionScene>
